[package]
name = "ether_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers="0.13.0"
tokio = { version = "1", features = ["full"] }
serde_json="1.0.24"
eyre = "0.6.8"
ethers-contract = "0.13.0"
